# Portfolio

./: .firebaserc  README.md  firebase.json  generateFirebaseConfig.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
.firebase/: hosting.b3V0.cache
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
api/: main.py  pyproject.toml
api/apifol/: main.py
app/: globals.css  layout.tsx  page.tsx
app/projects/: page.tsx
components/: CHATBOT.TSX  Chaticon.tsx  Contact.tsx  ContactFrom.tsx  Home.tsx  Navbar.tsx  Navigation.tsx  ProjectCard.tsx  Services.tsx  Testimonial.tsx  chaticonn.tsx  footer.tsx  nav-footer.tsx  page.tsx  practice.tsx  project.tsx  skill.tsx
constants/: index.ts
