[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["ZaheerAhmed <zaheer.ahmad.contact@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.3"
langchain-community = "^0.3.2"
email-validator = "^2.2.0"
pypdf = "^5.0.1"
langchain-openai = "^0.2.2"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
langchain-text-splitters = "^0.3.0"
faiss-cpu = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
